// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render icon variant 1`] = `
.c0 {
  border: 0;
  outline: none;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  padding: 16px;
  margin: 8px;
  font-size: 1.2rem;
  border-radius: 44px;
  position: relative;
  overflow: hidden;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:after {
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  pointer-events: none;
  background-image: radial-gradient(circle,#fff 10%,transparent 10.01%);
  background-repeat: no-repeat;
  background-position: 50%;
  -webkit-transform: scale(10,10);
  -ms-transform: scale(10,10);
  transform: scale(10,10);
  opacity: 0;
  -webkit-transition: -webkit-transform .5s,opacity 1s;
  -webkit-transition: transform .5s,opacity 1s;
  transition: transform .5s,opacity 1s;
}

.c0:active:after {
  -webkit-transform: scale(0,0);
  -ms-transform: scale(0,0);
  transform: scale(0,0);
  opacity: .3;
  -webkit-transition: 0s;
  transition: 0s;
}

.c0:hover {
  opacity: 0.9;
}

.c0:after {
  background-image: radial-gradient(circle,#808080 10%,transparent 10.01%);
}

<button
  class="c0"
>
  <svg
    fill="none"
    height="24"
    role="img"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
  >
    <title>
      Github icon
    </title>
    <path
      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
    />
  </svg>
</button>
`;

exports[`Button should render outlined variant 1`] = `
.c0 {
  border: 0;
  outline: none;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  padding: 16px;
  margin: 8px;
  font-size: 1.2rem;
  border-radius: 44px;
  position: relative;
  overflow: hidden;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: white;
  border-radius: 44px;
  border: 2px solid #6200EE;
  color: #6200EE;
}

.c0:after {
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  pointer-events: none;
  background-image: radial-gradient(circle,#fff 10%,transparent 10.01%);
  background-repeat: no-repeat;
  background-position: 50%;
  -webkit-transform: scale(10,10);
  -ms-transform: scale(10,10);
  transform: scale(10,10);
  opacity: 0;
  -webkit-transition: -webkit-transform .5s,opacity 1s;
  -webkit-transition: transform .5s,opacity 1s;
  transition: transform .5s,opacity 1s;
}

.c0:active:after {
  -webkit-transform: scale(0,0);
  -ms-transform: scale(0,0);
  transform: scale(0,0);
  opacity: .3;
  -webkit-transition: 0s;
  transition: 0s;
}

.c0:hover {
  opacity: 0.9;
}

.c0:after {
  background-image: radial-gradient(circle,#6200EE 10%,transparent 10.01%);
}

<button
  class="c0"
>
  Learn More
</button>
`;

exports[`Button should render primary button if no props are passed 1`] = `
.c0 {
  border: 0;
  outline: none;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  padding: 16px;
  margin: 8px;
  font-size: 1.2rem;
  border-radius: 44px;
  position: relative;
  overflow: hidden;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  color: white;
  background-color: #6200EE;
}

.c0:after {
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  pointer-events: none;
  background-image: radial-gradient(circle,#fff 10%,transparent 10.01%);
  background-repeat: no-repeat;
  background-position: 50%;
  -webkit-transform: scale(10,10);
  -ms-transform: scale(10,10);
  transform: scale(10,10);
  opacity: 0;
  -webkit-transition: -webkit-transform .5s,opacity 1s;
  -webkit-transition: transform .5s,opacity 1s;
  transition: transform .5s,opacity 1s;
}

.c0:active:after {
  -webkit-transform: scale(0,0);
  -ms-transform: scale(0,0);
  transform: scale(0,0);
  opacity: .3;
  -webkit-transition: 0s;
  transition: 0s;
}

.c0:hover {
  opacity: 0.9;
}

.c0:after {
  background-image: radial-gradient(circle,#fff 10%,transparent 10.01%);
}

<button
  class="c0"
>
  Sign In
</button>
`;

exports[`Button should work with the as prop and other styled-system ones 1`] = `
.c0 {
  border: 0;
  outline: none;
  cursor: pointer;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  padding: 16px;
  margin: 8px;
  font-size: 1.2rem;
  border-radius: 44px;
  position: relative;
  overflow: hidden;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  padding: 8px;
  color: white;
  background-color: #6200EE;
}

.c0:after {
  content: "";
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  pointer-events: none;
  background-image: radial-gradient(circle,#fff 10%,transparent 10.01%);
  background-repeat: no-repeat;
  background-position: 50%;
  -webkit-transform: scale(10,10);
  -ms-transform: scale(10,10);
  transform: scale(10,10);
  opacity: 0;
  -webkit-transition: -webkit-transform .5s,opacity 1s;
  -webkit-transition: transform .5s,opacity 1s;
  transition: transform .5s,opacity 1s;
}

.c0:active:after {
  -webkit-transform: scale(0,0);
  -ms-transform: scale(0,0);
  transform: scale(0,0);
  opacity: .3;
  -webkit-transition: 0s;
  transition: 0s;
}

.c0:hover {
  opacity: 0.9;
}

.c0:after {
  background-image: radial-gradient(circle,#fff 10%,transparent 10.01%);
}

<a
  class="c0"
>
  Just test
</a>
`;
